<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="12dp"
        android:importantForAccessibility="no"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/circular_avatar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_information"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_avatar"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_phone_number"
            app:layout_constraintEnd_toStartOf="@+id/ic_address"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Phạm Thu Phương" />

        <ImageView
            android:id="@+id/ic_address"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/address"
            android:src="@drawable/ic_address"
            app:layout_constraintBottom_toBottomOf="@+id/tv_name"
            app:layout_constraintEnd_toStartOf="@+id/ic_phone"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_name"
            app:layout_constraintTop_toTopOf="@id/tv_name" />

        <ImageView
            android:id="@+id/ic_phone"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/phone"
            android:src="@drawable/baseline_phone_24"
            app:layout_constraintBottom_toBottomOf="@+id/ic_address"
            app:layout_constraintEnd_toStartOf="@+id/tv_status"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ic_address"
            app:layout_constraintTop_toTopOf="@id/ic_address" />

        <TextView
            android:id="@+id/tv_is_deal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@id/ic_phone"
            app:layout_constraintEnd_toStartOf="@+id/tv_time"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ic_phone"
            app:layout_constraintTop_toTopOf="@id/ic_phone"
            tools:text="Đang chốt" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_is_deal"
            app:layout_constraintEnd_toStartOf="@id/ic_detail"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_is_deal"
            app:layout_constraintTop_toTopOf="@id/tv_is_deal"
            tools:text="7 ngày" />

        <ImageView
            android:id="@+id/ic_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/detail"
            android:src="@drawable/ic_detail"
            app:layout_constraintBottom_toBottomOf="@id/tv_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_time"
            app:layout_constraintTop_toTopOf="@id/tv_time" />


        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/layout_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="0354813535" />

        <TextView
            android:id="@+id/tv_goods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/tv_phone_number"
            app:layout_constraintStart_toEndOf="@id/tv_phone_number"
            app:layout_constraintTop_toTopOf="@id/tv_phone_number"
            tools:text="/ Mỹ phẩm" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_number">

            <TextView
                android:id="@+id/tv_content_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tuvangia"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv_content_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/heoo"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_content_1"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv_content_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/huong"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_content_2"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv_content_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/okipp"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_content_3"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv_stt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="1"
                android:layout_marginEnd="8dp"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>