<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderFragment">

    <TextView
        android:id="@+id/tv_title_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/order"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_sos_now"/>

    <TextView
        android:id="@+id/tv_select_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/select_order"
        android:textColor="#2E7D32"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_1"
        android:layout_width="1dp"
        android:layout_height="16dp"
        android:layout_margin="8dp"
        app:dividerColor="#2E7D32"
        app:layout_constraintBottom_toBottomOf="@id/tv_select_order"
        app:layout_constraintEnd_toStartOf="@id/tv_select_order"
        app:layout_constraintTop_toTopOf="@id/tv_select_order" />

    <TextView
        android:id="@+id/tv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/search"
        android:textColor="#2E7D32"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/divider_1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_sos_now"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:layout_margin="8dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="#FF8F00"
        app:layout_constraintEnd_toStartOf="@+id/layout_exp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_order">

        <ImageView
            android:id="@+id/iv_sos"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_sos"
            app:layout_constraintBottom_toTopOf="@+id/tv_sos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_sos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sos_now"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/iv_sos"
            app:layout_constraintStart_toStartOf="@id/iv_sos"
            app:layout_constraintTop_toBottomOf="@+id/iv_sos" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_exp"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="#2E7D32"
        app:layout_constraintBottom_toBottomOf="@id/layout_sos_now"
        app:layout_constraintEnd_toStartOf="@+id/layout_bbs"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/layout_sos_now"
        app:layout_constraintTop_toTopOf="@id/layout_sos_now"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/iv_exp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_exp"
            app:layout_constraintBottom_toTopOf="@+id/tv_exp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/iv_exp"
            app:layout_constraintStart_toStartOf="@id/iv_exp"
            app:layout_constraintTop_toBottomOf="@+id/iv_exp"
            tools:ignore="AllCaps" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bbs"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="#2E7D32"
        app:layout_constraintBottom_toBottomOf="@id/layout_exp"
        app:layout_constraintEnd_toStartOf="@+id/layout_xfast"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/layout_exp"
        app:layout_constraintTop_toTopOf="@id/layout_exp">

        <ImageView
            android:id="@+id/iv_bbs"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_bbs"
            app:layout_constraintBottom_toTopOf="@+id/tv_bbs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_bbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bbs"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/iv_bbs"
            app:layout_constraintStart_toStartOf="@id/iv_bbs"
            app:layout_constraintTop_toBottomOf="@+id/iv_bbs"
            tools:ignore="AllCaps" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_xfast"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="#2E7D32"
        app:layout_constraintBottom_toBottomOf="@id/layout_bbs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/layout_bbs"
        app:layout_constraintTop_toTopOf="@id/layout_bbs">

        <ImageView
            android:id="@+id/iv_xfast"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_xfast"
            app:layout_constraintBottom_toTopOf="@+id/tv_xfast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_xfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xfast"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/iv_xfast"
            app:layout_constraintStart_toStartOf="@id/iv_xfast"
            app:layout_constraintTop_toBottomOf="@+id/iv_xfast"
            tools:ignore="AllCaps" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/layout_sos_now" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>